--- a/app.html
+++ b/app.html
@@ -632,7 +632,19 @@
                 </div>
                 <div class="chat-input">
                     <form id="message-form">
+                        <div class="input-actions">
+                            <button type="button" id="upload-file-btn" class="action-btn" aria-label="Upload file or image">
+                                <i class="fas fa-paperclip"></i>
+                            </button>
+                            <input type="file" id="file-input" style="display: none;" accept="image/*,.pdf,.doc,.docx,.txt">
+                            <button type="button" id="voice-input-btn" class="action-btn" aria-label="Voice input">
+                                <i class="fas fa-microphone"></i>
+                            </button>
+                        </div>
                         <input type="text" id="user-input" placeholder="Message AI Chat..." aria-label="Type your message">
+                        <button type="button" id="toggle-voice-mode" class="action-btn" aria-label="Toggle text-to-speech">
+                            <i class="fas fa-volume-up"></i>
+                        </button>
                         <button type="submit" id="send-button" aria-label="Send message">
                             <i class="fas fa-paper-plane"></i>
                         </button>
