UPDATED MORE FEATURES AND UPDATED THE MODEL

--- a/profile.html
+++ b/profile.html
@@ -931,15 +931,15 @@
                     <span class="menu-text">Settings</span>
                 </a>
                 <div class="menu-divider"></div>
-                <a href="#" class="menu-item">
+                <a href="appointments.html" class="menu-item">
                     <i class="fas fa-calendar-alt"></i>
                     <span class="menu-text">Appointments</span>
                 </a>
-                <a href="#" class="menu-item">
+                <a href="resources.html" class="menu-item">
                     <i class="fas fa-book"></i>
                     <span class="menu-text">Resources</span>
                 </a>
-                <a href="#" class="menu-item">
+                <a href="support.html" class="menu-item">
                     <i class="fas fa-headset"></i>
                     <span class="menu-text">Support</span>
                 </a>
