--- a/redirect.html
+++ b/redirect.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #0f0c1d;
+            background-color: #0a0a0a;
             color: white;
             display: flex;
             flex-direction: column;
@@ -21,7 +21,7 @@
         h1 {
             font-size: 2.5rem;
             margin-bottom: 1rem;
-            background: linear-gradient(90deg, #2e0f6e 0%, #aa324a 100%);
+            background: linear-gradient(90deg, #004080 0%, #008040 100%);
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -35,7 +35,7 @@
         .spinner {
             border: 4px solid rgba(255, 255, 255, 0.1);
             border-radius: 50%;
-            border-top: 4px solid #aa324a;
+            border-top: 4px solid #008040;
             width: 40px;
             height: 40px;
             animation: spin 1s linear infinite;
